# python-clean-architecture-fastapi

./: .env.db  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
book_store/domain/book/: entity.py  exceptions.py  factory.py  repository.py
book_store/infrastructure/: dependencies.py
book_store/infrastructure/api/: app.py
book_store/infrastructure/api/routers/: books.py  management.py
book_store/use_cases/book/add/: dtos.py  use_case.py
book_store/use_cases/book/list_available/: dtos.py  use_case.py
domain/book/: entity.py  factory.py
domain/book/value_objects/: isbn.py
tests/: conftest.py
tests/e2e/: conftest.py  test_books.py  test_health_check.py
tests/unit/domain/: test_book_factory.py
tests/unit/domain/book/: repository.py  test_entity.py
tests/unit/domain/book/value_objects/: test_isbn.py
tests/unit/use_cases/book/: conftest.py
tests/unit/use_cases/book/add/: test_use_case.py
tests/unit/use_cases/book/list/: test_use_case.py
use_cases/book/add/: use_case.py
use_cases/book/list_available/: dtos.py  use_case.py
use_cases/books/add/: use_case.py
